--- a/app/templates/app/template_header.html
+++ b/app/templates/app/template_header.html
@@ -19,7 +19,10 @@
             <a class="nav-link nav-link-custom" href="{% url 'staff_list' %}">スタッフ情報</a>
           </li>
           <li class="nav-item">
-          <a class="nav-link nav-link-custom" href="{% url 'output' %}">データ出力</a>
+            <a class="nav-link nav-link-custom" href="{% url 'output' %}">データ出力</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link nav-link-custom" href="{% url 'sysad' %}">システム管理</a>
           </li>
           {% endif %}
         </ul>
