--- a/app/templates/app/info.html
+++ b/app/templates/app/info.html
@@ -69,7 +69,7 @@
         </ul>
         {% else %}
         <div>
-            <h2>勤務データが存在しません</h2>
+            <h2 class="mt-2">勤務データが存在しません</h2>
             {% if request.user.is_superuser %}
             <hr class="my-4">
             <div class="mt-1">
